--- a/backend/package.json
+++ b/backend/package.json
@@ -18,7 +18,7 @@
     "test:cov": "jest --coverage",
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
     "test:e2e": "jest --config ./test/jest-e2e.json",
-    "start:migrate:prod": "prisma migrate deploy && nest start:prod"
+    "start:migrate:prod": "prisma migrate deploy && yarn start:prod"
   },
   "dependencies": {
     "@aws-sdk/client-s3": "^3.828.0",
